# image-classifier-pipeline

./: .gitignore  README.md  pyproject.toml
image_classifier_pipeline/classifier_trainer/: cli.py  config.py  dataset.py  loss.py  model.py  trainer.py
image_classifier_pipeline/dataset_builder/: __init__.py  builder.py  cli.py  config.py
image_classifier_pipeline/feature_extractor/: cli.py  dino.py
image_classifier_pipeline/lib/: __init__.py  guards.py  logger.py  models.py  pandas.py
